--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
                         <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/company/90559249/admin/feed/posts/"><i class="fab fa-fw fa-linkedin-in"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://www.tiktok.com/foryou?lang=en"><i class="fab fa-fw fa-tiktok"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://studio.youtube.com/channel/UCVswN-iP7WoUpGGn_1QvikQ/videos/upload?filter=%5B%5D&sort=%7B%22columnType%22%3A%22date%22%2C%22sortOrder%22%3A%22DESCENDING%22%7D"><i class="fab fa-fw fa-youtube"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="https://web.whatsapp.com/"><i class="fab fa-fw fa-whatsapp"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-telegram"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-viber"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-skype"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://wa.link/7rrw5k/"><i class="fab fa-fw fa-whatsapp"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://telegram.org/dl"><i class="fab fa-fw fa-telegram"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://vb.me/letsChatOnViber"><i class="fab fa-fw fa-viber"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://join.skype.com/invite/wq0UO5bRdsJp"><i class="fab fa-fw fa-skype"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-dribbble"></i></a>
                     </div>
                 <button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -55,7 +55,7 @@
         <header class="masthead bg-primary text-white text-center">
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image-->
-                <img class="masthead-avatar mb-5" src="assets/img/avataaars.svg" alt="" />
+                <img class="masthead-avatar mb-5" src="assets/img/" alt="" />
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading text-uppercase mb-0">Deep Bayar</h1>
                 <!-- Icon Divider-->
@@ -65,7 +65,23 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">CEO and CO-FOUNDER</p>
+                <p class="masthead-subheading font-weight-light mb-0">Managing Director</p>
+            </div></nav>
+<!-- Masthead-->
+        <header class="masthead bg-primary text-white text-center">
+            <div class="container d-flex align-items-center flex-column">
+                <!-- Masthead Avatar Image-->
+                <img class="masthead-avatar mb-5" src="assets/img/" alt="" />
+                <!-- Masthead Heading-->
+                <h1 class="masthead-heading text-uppercase mb-0">Deep Bayar</h1>
+                <!-- Icon Divider-->
+                <div class="divider-custom divider-light">
+                    <div class="divider-custom-line"></div>
+                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                    <div class="divider-custom-line"></div>
+                </div>
+                <!-- Masthead Subheading-->
+                <p class="masthead-subheading font-weight-light mb-0">Managing Director</p>
             </div>
         </header>
         <!-- Portfolio Section-->
@@ -231,7 +247,7 @@
                     <div class="col-lg-4">
                         <h4 class="text-uppercase mb-4">About Me</h4>
                         <p class="lead mb-0">
-                            Daxue supplies you with latest technological product and solution .
+                            Daxue Established on 2023 July . Deep Bayar help on supplies you with latest technological product and solution 
                         </p>
                     </div>
                 </div>
